@@ -40,19 +40,19 @@ if ($query =~ s/^\w+://) {
     print "<table>\n";
     if ($opt{'from'}) {
 	$v = &lang_html_quote($opt{'from'});
-	print "<tr><td width=80>From:<td>$v\n";
+	print "<tr><td>From:<td>$v\n";
 	print "<input type='hidden' name='from' value=\"$v\">\n";
 	delete $opt{'from'};
     }
     foreach $h ('to', 'cc', 'bcc', 'subject') {
 	$v = &lang_html_quote($opt{$h});
-	print "<tr><td width=80>\u$h:<td><input type='text' name=\"$h\" value=\"$v\">\n";
+	print "<tr><td>\u$h:<td><input type='text' name=\"$h\" value=\"$v\">\n";
 	delete $opt{$h};
     }
     foreach $h (keys %opt) {
 	$qh = &html_quote($h);
 	$v = &lang_html_quote($opt{$h});
-	print "<tr><td width=80>\u$h:<td>$v\n";
+	print "<tr><td>\u$h:<td>$v\n";
 	print "<input type='hidden' name=\"$qh\" value=\"$v\">\n";
     }
     print "<tr><td colspan=2>\n";
@@ -114,17 +114,17 @@ if ($query =~ s/^\w+://) {
 	print "<hr>\n";
 	print "<table>\n";
 	if ($opt{'from'}) {
-	    print "<tr><td width=80>From:<td>$v{'from'}\n";
+	    print "<tr><td>From:<td>$v{'from'}\n";
 	    print "<input type='hidden' name='from' value=\"$v\">\n";
 	    delete $opt{'from'};
 	}
 	foreach $h ('to', 'cc', 'bcc', 'subject') {
-	    print "<tr><td width=80>\u$h:<td><input type='text' name=\"$h\" value=\"$v{$h}\">\n";
+	    print "<tr><td>\u$h:<td><input type='text' name=\"$h\" value=\"$v{$h}\">\n";
 	    delete $opt{$h};
 	}
 	foreach $h (keys %opt) {
 	    $qh = &html_quote($h);
-	    print "<tr><td width=80>\u$qh:<td>$v{$h}\n";
+	    print "<tr><td>\u$qh:<td>$v{$h}\n";
 	    print "<input type='hidden' name=\"$qh\" value=\"$v\">\n";
 	}
 	print "<tr><td colspan=2>\n";
