@@ -1,5 +1,10 @@
 2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02919] no need of width
+	* scripts/w3mmail.cgi.in: no need width=80 for header field name
+
+2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02919] wrong table width calculation
 	* table.c (set_table_matrix0): refine width calculation
 
